added views run npm install

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<mat-toolbar>
-    <img src="assets/images/logo.png" id="logo"> <span class="example-spacer"></span> test
-</mat-toolbar>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Le Pain Dans les Voiles</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+    <div [isAnimated]="true" [collapse]="isCollapsed" class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
+                <a class="nav-link" routerLink="">Dashboard</a>
+            </li>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="items">Items</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
+
+<router-outlet></router-outlet>
