working on model

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -5,7 +5,7 @@
         <input matInput placeholder="name" formControlName="name">
     </mat-form-field>
     <mat-form-field>
-        <input matInput placeholder="type" formControlName="type">
+        <input matInput placeholder="type of item" formControlName="item_type">
     </mat-form-field>
     <mat-form-field>
         <input matInput placeholder="price" formControlName="price">
