--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -9,9 +9,9 @@
                     <td mat-cell *matCellDef="let item"> {{item.name}} </td>
                 </ng-container>
                 <!-- Item name -->
-                <ng-container matColumnDef="type">
+                <ng-container matColumnDef="item_type">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> type </th>
-                    <td mat-cell *matCellDef="let item"> {{item.type}} </td>
+                    <td mat-cell *matCellDef="let item"> {{item.item_type}} </td>
                 </ng-container>
 
                 <!-- Count -->
