--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm mt-3">
             <h2>Items</h2>
             <button (click)="openDialog()" class="btn btn-primary">Add Item</button>
-            <table mat-table [dataSource]="items" matSort class="table-max mat-elevation-z8 mt-3 table-max">
+            <table mat-table [dataSource]="dataSource" matSort class="table-max mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
                     <td mat-cell *matCellDef="let item"> {{item.name}} </td>
@@ -23,7 +23,6 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
                     <td mat-cell *matCellDef="let item"> <button class="btn btn-primary">Edit</button> </td>
                 </ng-container>
-
 
 
                 <tr mat-header-row *matHeaderRowDef="displayedItemColumns"></tr>
