--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,12 @@ body {
 .table-max {
     width: 100%;
 }
+
+input[type=number] {
+    height: 30px;
+}
+
+input[type=number]:hover::-webkit-inner-spin-button {
+    width: 14px;
+    height: 30px;
+}
