--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -5,17 +5,31 @@
         <mat-form-field>
             <input matInput placeholder="name" formControlName="name">
         </mat-form-field>
+
+        <mat-form-field>
+            <input type="telephone" matInput placeholder="téléphone" formControlName="telephone">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker" formControlName="date">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <mat-form-field>
+            <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
+        </mat-form-field>
     </div>
     <div class="row">
         <div class="col-sm">
-            <h4>Breads</h4>
-            <mat-form-field class="w-100" *ngFor="let item of items.breads">
-                <input type="number" matInput placeholder=" {{item}} " formControlName="{{item}}">
+            <h4>Viennoiserie</h4>
+            <mat-form-field class="w-100" *ngFor="let item of items.viennoiserie">
+                <input type="number" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
             </mat-form-field>
         </div>
         <div class="col-sm">
-            <h4>Baked Goods</h4>
-            <mat-form-field class="w-100" *ngFor="let item of items.baked_goods">
+            <h4>Pains</h4>
+            <mat-form-field class="w-100" *ngFor="let item of items.pains">
                 <input type="number" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
             </mat-form-field>
         </div>
