--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -2,23 +2,25 @@
 
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()">
     <div class="row">
-        <mat-form-field>
-            <input matInput placeholder="name" formControlName="name">
-        </mat-form-field>
+        <div class="col-sm">
+            <mat-form-field>
+                <input matInput placeholder="name" formControlName="name">
+            </mat-form-field>
 
-        <mat-form-field>
-            <input type="telephone" matInput placeholder="téléphone" formControlName="telephone">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Choose a date</mat-label>
-            <input matInput [matDatepicker]="picker" formControlName="date">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+            <mat-form-field>
+                <input type="telephone" matInput placeholder="téléphone" formControlName="telephone">
+            </mat-form-field>
+            <mat-form-field>
+                <mat-label>Choose a date</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="date">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
 
-        <mat-form-field>
-            <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
-        </mat-form-field>
+            <mat-form-field>
+                <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
+            </mat-form-field>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm">
