--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-9 mt-3">
+        <div class="col-sm-9 mt-1">
             <h4>Orders</h4>
 
             <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
@@ -22,19 +22,27 @@
                     <td mat-cell *matCellDef="let item"> {{item.orderNumber}} </td>
                 </ng-container>
                 <!-- Item name -->
-                <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+                <ng-container matColumnDef="first_name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+                    <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="last_name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+                    <td mat-cell *matCellDef="let item"> {{item.last_name}} </td>
+                </ng-container>
+                <ng-container matColumnDef="telephone">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> telephone </th>
+                    <td mat-cell *matCellDef="let item"> {{item.telephone}} </td>
                 </ng-container>
 
                 <!-- Count -->
                 <ng-container matColumnDef="summary">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
                     <td mat-cell *matCellDef="let item"> {{item.summary}} </td>
                 </ng-container>
                 <ng-container matColumnDef="details">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
-                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary">View</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary">Edit</button> </td>
                 </ng-container>
 
 
@@ -43,7 +51,7 @@
                 <tr mat-row *matRowDef="let row; columns: displayedOrderColumns;"></tr>
             </table>
         </div>
-        <div class="col-sm mt-3">
+        <div class="col-sm mt-1">
             <h4>Item Quantities</h4>
             <table mat-table [dataSource]="items" matSort class="mat-elevation-z8 mt-3 table-max">
 
