--- a/src/app/new-order/new-order.component.scss
+++ b/src/app/new-order/new-order.component.scss
@@ -5,3 +5,18 @@ mat-form-field {
 .cdk-overlay-pane {
     max-width: 90vw;
 }
+
+.total_price {
+    display: block;
+    float: right;
+}
+
+.subheading {
+    font-weight: 500;
+    color: grey;
+}
+
+.subheadingbold {
+    font-weight: 500;
+    color: black;
+}
