--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-datepicker #picker ></mat-datepicker>
             </mat-form-field>
         </div>
     </div>
@@ -16,7 +16,7 @@
         <div class="col-sm-9 mt-1">
             <h4>Orders</h4>
 
-            <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
+            <table mat-table [dataSource]="ordersToDisplay" matSort class="mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="orderNumber">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Order No. </th>
                     <td mat-cell *matCellDef="let item"> {{item.orderNumber}} </td>
