--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -42,7 +42,7 @@
                 </ng-container>
                 <ng-container matColumnDef="details">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
-                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary">Edit</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog()" class="btn btn-primary">Edit</button> </td>
                 </ng-container>
 
 
