--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker ></mat-datepicker>
+                <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
     </div>
@@ -42,7 +42,7 @@
                 </ng-container>
                 <ng-container matColumnDef="details">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
-                    <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog()" class="btn btn-primary">Edit</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
                 </ng-container>
 
 
