--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,7 +16,7 @@
         <div class="col-sm-9 mt-1">
             <h4>Orders</h4>
 
-            <table mat-table [dataSource]="ordersToDisplay" matSort class="mat-elevation-z8 mt-3 table-max">
+            <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="orderNumber">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Order No. </th>
                     <td mat-cell *matCellDef="let item"> {{item.orderNumber}} </td>
@@ -53,7 +53,7 @@
         </div>
         <div class="col-sm mt-1">
             <h4>Item Quantities</h4>
-            <table mat-table [dataSource]="items" matSort class="mat-elevation-z8 mt-3 table-max">
+            <table mat-table [dataSource]="orderItemCounts" matSort class="mat-elevation-z8 mt-3 table-max">
 
                 <!-- Item name -->
                 <ng-container matColumnDef="name">
@@ -64,7 +64,7 @@
                 <!-- Count -->
                 <ng-container matColumnDef="count">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
-                    <td mat-cell *matCellDef="let item"> {{item.count}} </td>
+                    <td mat-cell *matCellDef="let item"> {{item.amount}} </td>
                 </ng-container>
 
 
