--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,9 +6,9 @@
             <button class="ml-1 btn btn-secondary">Tomorrow</button>
             <mat-form-field class="ml-2 mr-1">
                 <mat-label>Choose a date</mat-label>
-                <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)">
+                <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)" [formControl]="dateForm">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker></mat-datepicker>
+                <mat-datepicker #picker [startAt]="today"></mat-datepicker>
             </mat-form-field>
         </div>
     </div>
