--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,7 +8,7 @@
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)" [formControl]="dateForm">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                <mat-datepicker #picker ></mat-datepicker>
+                <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
         </div>
     </div>
@@ -38,7 +38,7 @@
                 <!-- Count -->
                 <ng-container matColumnDef="summary">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
-                    <td mat-cell *matCellDef="let item"> {{item.summary}} </td>
+                    <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
                 </ng-container>
                 <ng-container matColumnDef="details">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
