--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -20,8 +20,9 @@
                 </ng-container>
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
-                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary">Edit</button> </td>
+                    <td mat-cell *matCellDef="let item"> <button class="btn btn-primary" (click)="editItemDialog(item)">Edit</button> </td>
                 </ng-container>
+
 
 
                 <tr mat-header-row *matHeaderRowDef="displayedItemColumns"></tr>
