--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,15 +1,13 @@
 <div class="container-fluid mt-3">
     <div class="row">
         <div class="col-sm">
-            <button (click)="openDialog()" class="btn btn-primary">New Order</button>
-
-            <button class="ml-1 btn btn-secondary">Tomorrow</button>
-            <mat-form-field class="ml-2 mr-1">
+            <mat-form-field class=" mr-2">
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)" [formControl]="dateForm">
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
+            <button (click)="openDialog()" class="btn btn-primary">New Order</button>
         </div>
     </div>
     <div class="row">
@@ -40,10 +38,15 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
                     <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
                 </ng-container>
+                <ng-container matColumnDef="total">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+                    <td mat-cell *matCellDef="let item"> {{ formatter.format(item.total)}} </td>
+                </ng-container>
                 <ng-container matColumnDef="details">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
                     <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
                 </ng-container>
+
 
 
 
