--- a/src/app/edit-item/edit-item.component.html
+++ b/src/app/edit-item/edit-item.component.html
@@ -1,5 +1,5 @@
-
-<H1>Edit Item</H1>
+<H1>
+    Edit Item</H1>
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()">
 
     <mat-form-field>
@@ -36,5 +36,5 @@
     </mat-form-field>
 
     <button mat-button class="btn btn-primary" color="primary" type="submit" [disabled]="myForm.invalid">Save Item</button>
-    <button mat-button class="btn btn-danger" color="primary" type="button" (click)="delete()">Delete</button>
+    <button mat-button class="ml-2 btn btn-danger" color="primary" type="button" (click)="delete()">Delete</button>
 </form>
