--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -11,71 +11,71 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-9 mt-1">
-            <h4>Orders</h4>
+        <div class="col-sm">
+            <mat-tab-group>
+                <mat-tab label="Orders">
+                    <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
+                        <ng-container matColumnDef="orderNumber">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Order No. </th>
+                            <td mat-cell *matCellDef="let item"> {{item.id}} </td>
+                        </ng-container>
+                        <!-- Item name -->
+                        <ng-container matColumnDef="first_name">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
+                            <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="last_name">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+                            <td mat-cell *matCellDef="let item"> {{item.last_name}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="telephone">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> telephone </th>
+                            <td mat-cell *matCellDef="let item"> {{item.telephone}} </td>
+                        </ng-container>
 
-            <table mat-table [dataSource]="orders" matSort class="mat-elevation-z8 mt-3 table-max">
-                <ng-container matColumnDef="orderNumber">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Order No. </th>
-                    <td mat-cell *matCellDef="let item"> {{item.id}} </td>
-                </ng-container>
-                <!-- Item name -->
-                <ng-container matColumnDef="first_name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name </th>
-                    <td mat-cell *matCellDef="let item"> {{item.first_name}} </td>
-                </ng-container>
-                <ng-container matColumnDef="last_name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-                    <td mat-cell *matCellDef="let item"> {{item.last_name}} </td>
-                </ng-container>
-                <ng-container matColumnDef="telephone">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> telephone </th>
-                    <td mat-cell *matCellDef="let item"> {{item.telephone}} </td>
-                </ng-container>
-
-                <!-- Count -->
-                <ng-container matColumnDef="summary">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
-                    <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
-                </ng-container>
-                <ng-container matColumnDef="total">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-                    <td mat-cell *matCellDef="let item"> {{ formatter.format(item.total)}} </td>
-                </ng-container>
-                <ng-container matColumnDef="details">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
-                    <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
-                </ng-container>
-
-
-
-
-                <tr mat-header-row *matHeaderRowDef="displayedOrderColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedOrderColumns;"></tr>
-            </table>
-        </div>
-        <div class="col-sm mt-1">
-            <h4>Item Quantities</h4>
-            <table mat-table [dataSource]="orderItemCounts" matSort class="mat-elevation-z8 mt-3 table-max">
-
-                <!-- Item name -->
-                <ng-container matColumnDef="name">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-                    <td mat-cell *matCellDef="let item"> {{item.name}} </td>
-                </ng-container>
-
-                <!-- Count -->
-                <ng-container matColumnDef="count">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
-                    <td mat-cell *matCellDef="let item"> {{item.amount}} </td>
-                </ng-container>
+                        <!-- Count -->
+                        <ng-container matColumnDef="summary">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
+                            <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="total">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+                            <td mat-cell *matCellDef="let item"> {{ formatter.format(item.total)}} </td>
+                        </ng-container>
+                        <ng-container matColumnDef="details">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
+                            <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
+                        </ng-container>
 
 
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
 
+                        <tr mat-header-row *matHeaderRowDef="displayedOrderColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedOrderColumns;"></tr>
+                    </table>
+                </mat-tab>
+                <mat-tab label="Production Quantities">
+                    <table mat-table [dataSource]="orderItemCounts" matSort class="mat-elevation-z8 mt-3 table-max">
+
+                        <!-- Item name -->
+                        <ng-container matColumnDef="name">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                            <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+                        </ng-container>
+
+                        <!-- Count -->
+                        <ng-container matColumnDef="count">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Count </th>
+                            <td mat-cell *matCellDef="let item"> {{item.amount}} </td>
+                        </ng-container>
+
+
+
+                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                    </table>
+                </mat-tab>
+            </mat-tab-group>
         </div>
     </div>
 </div>
