--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,11 @@
                 <a class="nav-link" routerLink="items">Items</a>
             </li>
         </ul>
+        <ul class="navbar-nav navbar-right">
+            <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
+                <a class="nav-link" (click)="logout()">Logout</a>
+            </li>
+        </ul>
     </div>
 </nav>
 
