--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         </ul>
         <ul class="navbar-nav navbar-right">
             <li class="nav-item " [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active">
-                <a class="nav-link" (click)="logout()">Logout</a>
+                <a class="nav-link" type="button" (click)="logout()">Logout</a>
             </li>
         </ul>
     </div>
