--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,6 +2,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-8 col-md-6 col-md-offset-1">
+            <div *ngIf="errorMessage" class="alert alert-danger">
+                <p>{{errorMessage}}</p>
+            </div>
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
                 <div class="form-group">
                     <label for="username">Username</label>
@@ -15,7 +18,7 @@
                     >
                 </div>
                 <div class="form-group">
-                    <label for="password">Username</label>
+                    <label for="password">Password</label>
                     <input
                     type="password"
                     id="password"
