--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,6 +2,9 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-md-6 col-md-offset-3">
+            <div *ngIf="errorMessage" class="alert alert-danger">
+                <p>{{errorMessage}}</p>
+            </div>
             <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
                 <div class="form-group">
                     <label for="username">Username</label>
@@ -24,10 +27,12 @@
                     name="password"
                     required
                     minlength="6"
+                    #password="ngModel"
                     >
                 </div>
+                <span *ngIf="!password.valid && password.touched" class="help-block alert alert-danger">Password must be at least 6 characters</span>
                 <div class="form-group">
-                    <label for="passwordConf">Password</label>
+                    <label for="passwordConf">Password Confirmation</label>
                     <input
                     type="password"
                     id="passwordConf"
@@ -36,8 +41,10 @@
                     name="passwordConf"
                     required
                     minlength="6"
+                    #passwordConf="ngModel"
                     >
                 </div>
+                <span *ngIf="!passwordConf.valid && passwordConf.touched" class="help-block alert alert-danger">Password Confirmation must be at least 6 characters</span>
                 <div>
                     <button class="btn btn-primary" type="submit" [disabled]="authForm.invalid">Submit</button>
                     <button class="btn btn-primary" type="button" (click)="login()">Login</button>
