--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 
     <div *ngIf="errorMessage" class="alert alert-danger">
-    <p>{{errorMessage}}</p>
+        <p>{{errorMessage}}</p>
     </div>
     <div class="row">
         <div class="col-sm mt-3">
@@ -20,7 +20,7 @@
                 <!-- Count -->
                 <ng-container matColumnDef="price">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> price </th>
-                    <td mat-cell *matCellDef="let item"> ${{item.price}} </td>
+                    <td mat-cell *matCellDef="let item"> {{formatter.format(item.price)}} </td>
                 </ng-container>
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
