--- a/src/app/items/items.component.html
+++ b/src/app/items/items.component.html
@@ -9,12 +9,12 @@
             <table mat-table [dataSource]="dataSource" matSort class="table-max mat-elevation-z8 mt-3 table-max">
                 <ng-container matColumnDef="name">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name </th>
-                    <td mat-cell *matCellDef="let item"> {{item.name}} </td>
+                    <td mat-cell *matCellDef="let item"> {{capitalize(item.name)}} </td>
                 </ng-container>
                 <!-- Item name -->
                 <ng-container matColumnDef="item_type">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> type </th>
-                    <td mat-cell *matCellDef="let item"> {{item.item_type}} </td>
+                    <td mat-cell *matCellDef="let item"> {{capitalize(item.item_type)}} </td>
                 </ng-container>
 
                 <!-- Count -->
