created order object for database

--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -53,9 +53,9 @@
         </div>
         <div class="col-sm">
             <div class="total_price">
-                <span class="subheading">Subtotal: </span><span class="subheadingbold">{{formatter.format(total_before_tax)}} </span>
-                <span class="subheading">Tax: </span><span class="subheadingbold">{{formatter.format(total_tax)}} </span>
-                <span class="subheading">Total: </span><span class="subheadingbold">{{formatter.format(total_price)}} </span>
+                <span class="subheading">Subtotal: </span><span class="subheadingbold">{{formatter.format(sub_total)}} </span>
+                <span class="subheading">Tax: </span><span class="subheadingbold">{{formatter.format(tax)}} </span>
+                <span class="subheading">Total: </span><span class="subheadingbold">{{formatter.format(total)}} </span>
 
             </div>
         </div>
