--- a/src/app/new-order/new-order.component.scss
+++ b/src/app/new-order/new-order.component.scss
@@ -24,3 +24,15 @@ mat-form-field {
 .sliced {
     width: 44%!important;
 }
+
+
+/*
+.wrap {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+mat-form-field {
+    flex: 0 0 33.3333%;
+}
+*/
