getting ready to filter forms

--- a/src/app/new-order/new-order.component.scss
+++ b/src/app/new-order/new-order.component.scss
@@ -36,3 +36,13 @@ mat-form-field {
     flex: 0 0 33.3333%;
 }
 */
+
+.filter-field {
+    font-weight: 500;
+    color: black;
+    font-size: 16px;
+}
+
+::ng-deep .filter-field .mat-form-field-underline {
+    background-color: transparent!important;
+}
