--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -2,7 +2,7 @@
 
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()">
     <div class="row">
-        <div class="col">
+        <div class="col-sm">
             <mat-form-field>
                 <input matInput placeholder="First Name" formControlName="first_name">
             </mat-form-field>
@@ -19,6 +19,9 @@
                 <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
+            <mat-form-field>
+                <input matInput placeholder="Filter items" formControlName="filter_items">
+            </mat-form-field>
             <!-- Don't think we need this field
             <mat-form-field>
                 <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
@@ -27,12 +30,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col">
+        <div class="col-sm">
 
             <h4>Viennoiserie</h4>
             <mat-dialog-content>
                 <mat-form-field class="w-100" *ngFor="let item of items.viennoiserie">
-                    <input type="number" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
+                    <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
         </div>
@@ -40,15 +43,15 @@
             <h4>Pains</h4>
             <mat-dialog-content>
                 <mat-form-field class="w-100" *ngFor="let item of items.pains" [class.sliced]="item.sliced_option">
-                    <input type="number" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
+                    <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
         </div>
-        <div class="col">
+        <div class="col-sm">
             <h4>Nöel</h4>
             <mat-dialog-content>
                 <mat-form-field class="w-100" *ngFor="let item of items.noel">
-                    <input type="number" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
+                    <input type="number" matInput autocomplete="off" placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
         </div>
