fixed filter error

--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -20,7 +20,7 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Filter items" formControlName="filter_items">
+                <input matInput placeholder="Filter items">
             </mat-form-field>
             <!-- Don't think we need this field
             <mat-form-field>
