--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -36,7 +36,7 @@
                         <!-- Count -->
                         <ng-container matColumnDef="summary">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Summary </th>
-                            <td mat-cell *matCellDef="let item"> {{ orderSummary(item)}} </td>
+                            <td mat-cell *matCellDef="let item"> {{ item.itemOrders | json }} </td>
                         </ng-container>
                         <ng-container matColumnDef="total">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
