--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -20,7 +20,7 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             <mat-form-field>
-                <input matInput placeholder="Filter items">
+                <input matInput placeholder="Filter items" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
             </mat-form-field>
             <!-- Don't think we need this field
             <mat-form-field>
@@ -42,7 +42,7 @@
         <div class="col-6 wrap">
             <h4>Pains</h4>
             <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of items.pains" [class.sliced]="item.sliced_option">
+                <mat-form-field class="w-100" *ngFor="let item of items.pains| searchFilter: searchText " [class.sliced]="item.sliced_option">
                     <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
