--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -64,9 +64,9 @@
         </div>
         <div class="col-sm">
             <div class="total_price">
-                <span class="subheading">Subtotal: </span><span class="subheadingbold">{{formatter.format(sub_total)}} </span>
-                <span class="subheading">Tax: </span><span class="subheadingbold">{{formatter.format(tax)}} </span>
-                <span class="subheading">Total: </span><span class="subheadingbold">{{formatter.format(total)}} </span>
+                <span class="subheading">Subtotal: </span><span class="subheadingbold">{{ sub_total | currency }} </span>
+                <span class="subheading">Tax: </span><span class="subheadingbold">{{tax | currency }} </span>
+                <span class="subheading">Total: </span><span class="subheadingbold">{{ total | currency }} </span>
 
             </div>
         </div>
