filter working in new order view

--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -1,6 +1,6 @@
 <h1>New Order</h1>
 
-<form [formGroup]="myForm" (ngSubmit)="submitHandler()">
+<form [formGroup]="myForm" (ngSubmit)="submitHandler()" class="form-flex">
     <div class="row">
         <div class="col-sm">
             <mat-form-field>
@@ -29,7 +29,7 @@
             -->
         </div>
     </div>
-    <div class="row">
+    <div class="row flex-row">
         <div class="col-sm">
 
             <h4>Viennoiserie</h4>
