adding all orders

--- a/src/app/new-order/new-order.component.scss
+++ b/src/app/new-order/new-order.component.scss
@@ -1,4 +1,4 @@
-mat-form-field {
+.top mat-form-field {
     margin-right: 15px;
 }
 
@@ -22,7 +22,7 @@ mat-form-field {
 }
 
 .sliced {
-    width: 44%!important;
+    width: 50%!important;
 }
 
 
