--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -1,7 +1,7 @@
 <h1>{{viewClass}}</h1>
 
 <form [formGroup]="myForm" (ngSubmit)="submitHandler()" class="form-flex">
-    <div class="row">
+    <div class="row top">
         <div class="col-sm">
             <mat-form-field>
                 <input matInput placeholder="First Name" formControlName="first_name">
@@ -34,7 +34,7 @@
 
             <h4>Viennoiserie</h4>
             <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of items.viennoiserie">
+                <mat-form-field class="w-100" *ngFor="let item of items.viennoiserie | searchFilter: searchText">
                     <input type="number" autocomplete="off" matInput placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
@@ -50,7 +50,7 @@
         <div class="col-sm">
             <h4>Nöel</h4>
             <mat-dialog-content>
-                <mat-form-field class="w-100" *ngFor="let item of items.noel">
+                <mat-form-field class="w-100" *ngFor="let item of items.noel | searchFilter: searchText">
                     <input type="number" matInput autocomplete="off" placeholder=" {{item.name}} " formControlName="{{item.name}}">
                 </mat-form-field>
             </mat-dialog-content>
