--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid mt-3">
-    <div class="row">
+    <div class="row no-print">
         <div class="col-sm">
             <mat-form-field class=" mr-2">
                 <mat-label>Choose a date</mat-label>
@@ -42,16 +42,20 @@
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
                             <td mat-cell *matCellDef="let item"> {{ item.total | currency }} </td>
                         </ng-container>
+                        <ng-container matColumnDef="date">
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+                            <td mat-cell *matCellDef="let item"> {{ item.date | date :'mediumDate'}} </td>
+                        </ng-container>
                         <ng-container matColumnDef="details">
-                            <th mat-header-cell *matHeaderCellDef mat-sort-header> Details </th>
-                            <td mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
+                            <th mat-header-cell *matHeaderCellDef mat-sort-header class="no-print"> Details </th>
+                            <td class="no-print" mat-cell *matCellDef="let item"> <button (click)="openEditDialog(item.id)" class="btn btn-primary">Edit</button> </td>
                         </ng-container>
 
 
 
 
-                        <tr mat-header-row *matHeaderRowDef="displayedOrderColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedOrderColumns;"></tr>
+                        <tr mat-header-row *matHeaderRowDef="displayedAllOrderColumns"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedAllOrderColumns;"></tr>
                     </table>
                 </mat-tab>
                 <mat-tab label="Orders">
