--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,7 @@
 <div class="container-fluid mt-3">
     <div class="row no-print">
         <div class="col-sm header-bar">
-            <button (click)="openDialog()" class=" btn btn-primary v-top">New Order</button>
-
-            <mat-form-field class="ml-2">
-                <input matInput autocomplete="off" placeholder="Filter items" (keyup)="applyFilter($event.target.value)">
-            </mat-form-field>
+            <button (click)="openDialog()" class=" btn btn-primary">New Order</button>
             <mat-form-field class="ml-2 mr-2" [class.hidden-item]="activeTab == 'All Orders'">
                 <mat-label>Choose a date</mat-label>
                 <input matInput [matDatepicker]="picker" (dateChange)="onDateSelected($event)" [formControl]="dateForm">
