--- a/src/app/new-order/new-order.component.html
+++ b/src/app/new-order/new-order.component.html
@@ -20,9 +20,13 @@
                 <mat-datepicker #picker></mat-datepicker>
             </mat-form-field>
             <mat-form-field>
-                <input matInput autocomplete="off" placeholder="Filter items" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
+                <input matInput placeholder="Filter items" [ngModelOptions]="{standalone: true}" [(ngModel)]="searchText">
             </mat-form-field>
-
+            <!-- Don't think we need this field
+            <mat-form-field>
+                <input type="telephone" matInput placeholder="Numéro client" formControlName="client_number">
+            </mat-form-field>
+            -->
         </div>
     </div>
     <div class="row flex-row">
