finished items service

--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -22,7 +22,7 @@
         </mat-select>
     </mat-form-field>
     <mat-form-field appearance="fill">
-        <mat-select formControlName="sliced">
+        <mat-select formControlName="sliced_option">
             <mat-option [value]="false">
                 No Slice Option
             </mat-option>
