--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -45,7 +45,7 @@
                         </ng-container>
                         <ng-container matColumnDef="date">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                            <td mat-cell *matCellDef="let item"> {{ item.date | date :'mediumDate'}} </td>
+                            <td mat-cell *matCellDef="let item"> {{ item.date.toDate() | date :'mediumDate'}} </td>
                         </ng-container>
                         <ng-container matColumnDef="details">
                             <th mat-header-cell *matHeaderCellDef mat-sort-header class="no-print"> Details </th>
