--- a/src/app/edit-order/edit-order.component.html
+++ b/src/app/edit-order/edit-order.component.html
@@ -1,1 +1,2 @@
 <p>edit-order works!</p>
+<app-order-form [orderData]="orderData" [myForm]="myForm" (itemOrderEmitter)="submitForm($event)"></app-order-form>
